; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/mouse/extr_maplemouse.c_remove_maple_mouse.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/mouse/extr_maplemouse.c_remove_maple_mouse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.maple_device = type { i32* }
%struct.dc_mouse = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @remove_maple_mouse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remove_maple_mouse(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.maple_device*, align 8
  %4 = alloca %struct.dc_mouse*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = call %struct.maple_device* @to_maple_dev(%struct.device* %5)
  store %struct.maple_device* %6, %struct.maple_device** %3, align 8
  %7 = load %struct.maple_device*, %struct.maple_device** %3, align 8
  %8 = call %struct.dc_mouse* @maple_get_drvdata(%struct.maple_device* %7)
  store %struct.dc_mouse* %8, %struct.dc_mouse** %4, align 8
  %9 = load %struct.maple_device*, %struct.maple_device** %3, align 8
  %10 = getelementptr inbounds %struct.maple_device, %struct.maple_device* %9, i32 0, i32 0
  store i32* null, i32** %10, align 8
  %11 = load %struct.dc_mouse*, %struct.dc_mouse** %4, align 8
  %12 = getelementptr inbounds %struct.dc_mouse, %struct.dc_mouse* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @input_unregister_device(i32 %13)
  %15 = load %struct.maple_device*, %struct.maple_device** %3, align 8
  %16 = call i32 @maple_set_drvdata(%struct.maple_device* %15, i32* null)
  %17 = load %struct.dc_mouse*, %struct.dc_mouse** %4, align 8
  %18 = call i32 @kfree(%struct.dc_mouse* %17)
  ret i32 0
}

declare dso_local %struct.maple_device* @to_maple_dev(%struct.device*) #1

declare dso_local %struct.dc_mouse* @maple_get_drvdata(%struct.maple_device*) #1

declare dso_local i32 @input_unregister_device(i32) #1

declare dso_local i32 @maple_set_drvdata(%struct.maple_device*, i32*) #1

declare dso_local i32 @kfree(%struct.dc_mouse*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
